2005-04-17  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* sample/PolarFixed.cs: (PolarFixed.PolarFixedChild): Fix compilation
	problem.

2005-04-15  Mike Kestner  <mkestner@novell.com>

	* configure.in : remove unnecessary libxml check.
	* parser/gapi-parser.cs : use a System.Xml to kill gapi_format_xml.
	* parser/formatXml.c : kill.
	* parser/Makefile.am : kill gapi_format_xml
	* */*-api.raw : enormous whitespace diff. sorry dawgs on mono-patches.

2005-04-15  Mike Kestner  <mkestner@novell.com>

	* parser/gapi-parser.cs : C# rewrite of the old perl driver script.
	* parser/gapi_parser.pl : kill.
	* parser/gapi2-parser.in : invoke via $(RUNTIME).
	* parser/Makefile.am : build rework for C# parser driver.
	* sources/Makefile.am : use $(RUNTIME) to invoke new parser assm.

2005-04-12  Mike Kestner  <mkestner@novell.com>

	* configure.in : bump version to 1.9.3 and tag.

2005-04-11  Mike Kestner  <mkestner@novell.com>

	* gdk/Pixbuf.custom : fix out params on RenderPixmapAndMask* methods.

2005-04-11  Dan Winship  <danw@novell.com>

	* generator/ClassBase.cs (ParseImplements): record both managed
	and unmanaged interface declarations.
	(Implements): check recursively

	* generator/ObjectGen.cs (Generate): output managed interfaces

	* gtk/Gtk.metadata: make Container implement IEnumerable

	* gtk/Container.custom (GetEnumerator): implement (a simplified
	form of Children).
	(AllChildren): add this (which accumulates the results of
	Forall()).
	(ForAll): mark ForAll(bool,CallbackInvoker) obsolete and add a
	ForAll(bool,Gtk.Callback) overload to replace it.

	* sample/PolarFixed.cs: new silly but fully-functional demo of
	how to subclass container.

	* sample/CustomNotebook.cs: kill this, since it was really
	complicated, and never fully functional.

	* sample/GtkDemo/DemoImages.cs (ToggleSensitivity): Use foreach
	directly on the container, rather than on its .Children.

2005-04-11  Mike Kestner  <mkestner@novell.com>
