@@ -1,3 +1,9 @@
+2005-04-19  Mike Kestner  <mkestner@novell.com>
+
+	* gdk/Gdk.metadata : add a None member to ModifierType and fix the
+	definition for ModifierMask since the parser barfs on it. 
+	[Fixes #74594]
+
 2005-04-17  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>
 
 	* sample/PolarFixed.cs: (PolarFixed.PolarFixedChild): Fix compilation
